--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,18 @@
   text-align: center;
 }
 
-.Munch-logo {
-  height: 10vmin;
+.App-logo {
+  height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .Munch-logo {
+  .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.Munch-header {
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.Munch-link {
+.App-link {
   color: #61dafb;
 }
 
-@keyframes Munch-logo-spin {
+@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
