--- a/src/index.css
+++ b/src/index.css
@@ -21,26 +21,20 @@ body {
 
 .card-container, .card-container-vertical {
   width: 100vw;
-  height: 100vh;
+  height: 110vh;
   overflow: hidden;
 }
 
 .card-wrapper, .card-wrapper-vertical {
   width: 100%;
-  height: 100%;
-  scroll-snap-align: start;
+  height: auto;
+  /* scroll-snap-align: start; */
   display:inline-block;
   vertical-align: top;
 }
 
-
-/* On large screens */
-@media (min-width: 1024px) {
-  .card-wrapper, .card-wrapper-vertical {
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.card-box { 
+  margin-bottom: 10px;
 }
 
 .card-container {
@@ -50,10 +44,9 @@ body {
 }
 
 .card-container-vertical {
-  scroll-snap-type: y mandatory; 
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch; 
+  overflow-y:visible;
 }
+
 
 .navbar {
   position: fixed;
