--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,11 @@ body {
 
 .card-container, .card-container-vertical {
   width: 100vw;
-  height: 110vh;
-  overflow: hidden;
 }
 
 .card-wrapper, .card-wrapper-vertical {
   width: 100%;
+  padding: 10px 10px 10px 10px;
   height: auto;
   /* scroll-snap-align: start; */
   display:inline-block;
@@ -35,6 +34,17 @@ body {
 
 .card-box { 
   margin-bottom: 10px;
+
+}
+
+.card-body img:hover {
+  opacity: 0.8;
+}
+
+
+.card-body {
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
 }
 
 .card-container {
@@ -57,9 +67,17 @@ body {
 }
 
 
-.main-content {
-  padding-top: 60px;
+#root {
+  background-color: #e9e9e9;
+  background-size: cover; /* or any other styling you need */
+  background-repeat: no-repeat;
+  padding-top: 55px;
+  overflow-y: auto;
+  height: 100vh;
 }
+
+
+
 
 .horizontal-styles {
   margin-left:10px;
@@ -92,4 +110,22 @@ body {
 
 .tag-link:hover {
   background-color: #bdbdbd; /* Darker grey on hover, change as needed */
+}
+
+
+.page-heading { 
+  /* background-color: rgb(216, 216, 216); */
+  /* line-height: 20px; */
+  /* color: rgb(0, 0, 0); */
+}
+
+
+.background {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+  grid-gap: 10px;
+}
+
+.shape.circle {
+  border-radius: 50%;
 }
