--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,14 @@ body {
 .shape.circle {
   border-radius: 50%;
 }
+
+
+.header-btn {
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.copy-btn{
+  font-size: 10px;
+}
